Fix stickiness of the details div and prevent it from overflowing

--- a/index.css
+++ b/index.css
@@ -14,8 +14,10 @@
   width: 55.5px;
 }
 
-#labelDiv {
+#detailsDiv {
   background: white;
+  overflow: hidden;
   position: sticky;
   top: 0;
+  white-space: nowrap;
 }
